--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
