--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.1.4",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "aws-amplify": "^6.5.0",
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-get-random-values": "^1.11.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
