--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,7 @@
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-get-random-values": "^1.11.0",
