--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,9 @@
     "@react-navigation/stack": "^6.4.1",
     "aws-amplify": "^6.5.0",
     "expo": "~51.0.23",
+    "expo-camera": "^15.0.15",
+    "expo-image-picker": "^15.0.7",
+    "expo-media-library": "^16.0.4",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
