--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,17 +11,14 @@
   "dependencies": {
     "@aws-amplify/react-native": "^1.1.4",
     "@aws-amplify/ui-react-native": "^2.2.3",
-    "@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "aws-amplify": "^6.5.0",
+    "axios": "^1.7.6",
     "expo": "~51.0.23",
-    "expo-camera": "^15.0.15",
-    "expo-image-picker": "^15.0.7",
-    "expo-media-library": "^16.0.4",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
